k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-eks-a
  labels:
    app: hello-eks-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-eks-a
  template:
    metadata:
      labels:
        app: hello-eks-a
    spec:
      containers:
        - name: hello
          image: 886937713965.dkr.ecr.eu-north-1.amazonaws.com/challenge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-eks-a
spec:
  type: NodePort
  selector:
    app: hello-eks-a
  ports:
    - port: 8000
